fix comment by mentor